[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/SongCardEvolution.gd" type="Script" id=1]
[ext_resource path="res://themes/theme.tres" type="Theme" id=3]

[node name="SongCardEvolution" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_top = 20.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 25
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 313.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 12

[node name="TitleContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 313.0
margin_bottom = 42.0
custom_constants/separation = 4

[node name="Title" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/TitleContainer"]
margin_right = 313.0
margin_bottom = 14.0
text = "Title"
align = 2

[node name="TitleLabel" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer/TitleContainer"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 313.0
margin_bottom = 42.0

[node name="AuthorContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 313.0
margin_bottom = 96.0
custom_constants/separation = 4

[node name="Author" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/AuthorContainer"]
margin_right = 313.0
margin_bottom = 14.0
text = "Author"
align = 2

[node name="AuthorLabel" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer/AuthorContainer"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 313.0
margin_bottom = 42.0

[node name="AlbumContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 313.0
margin_bottom = 150.0
custom_constants/separation = 4

[node name="Album" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/AlbumContainer"]
margin_right = 313.0
margin_bottom = 14.0
text = "Album"
align = 2

[node name="AlbumLabel" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer/AlbumContainer"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 313.0
margin_bottom = 42.0

[node name="OptionsContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 664.0
margin_right = 313.0
margin_bottom = 684.0
size_flags_vertical = 10

[node name="DeleteButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/OptionsContainer"]
margin_right = 55.0
margin_bottom = 20.0
size_flags_vertical = 3
text = "Delete"

[node name="LyricSizeButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/OptionsContainer"]
margin_left = 273.0
margin_right = 313.0
margin_bottom = 20.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 10
text = "Aa"

[node name="Spacer" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 696.0
margin_right = 313.0
margin_bottom = 700.0
rect_min_size = Vector2( 0, 4 )

[node name="Lyrics" type="TextEdit" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 338.0
margin_right = 1280.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
show_line_numbers = true
smooth_scrolling = true
wrap_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="CanvasLayer"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 490.0
margin_top = 316.0
margin_right = -486.0
margin_bottom = -316.0
theme = ExtResource( 3 )
resizable = true
dialog_text = "Are you sure to delete this lyrics?"
dialog_autowrap = true

[node name="Timer" type="Timer" parent="CanvasLayer"]
wait_time = 2.0
one_shot = true

[connection signal="text_changed" from="MarginContainer/HBoxContainer/VBoxContainer/TitleContainer/TitleLabel" to="." method="_on_TitleLabel_text_changed"]
[connection signal="text_changed" from="MarginContainer/HBoxContainer/VBoxContainer/AuthorContainer/AuthorLabel" to="." method="_on_AuthorLabel_text_changed"]
[connection signal="text_changed" from="MarginContainer/HBoxContainer/VBoxContainer/AlbumContainer/AlbumLabel" to="." method="_on_AlbumLabel_text_changed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/OptionsContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/OptionsContainer/LyricSizeButton" to="." method="_on_LyricSizeButton_pressed"]
[connection signal="text_changed" from="MarginContainer/HBoxContainer/Lyrics" to="." method="_on_TextEdit_text_changed"]
[connection signal="confirmed" from="CanvasLayer/ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
[connection signal="timeout" from="CanvasLayer/Timer" to="." method="_on_Timer_timeout"]
